1. 좌측메뉴 - 계정설정 팝업 작업 2. My Profile 화면 작업 o# Your branch is up T#o date with 'origin/main'.

--- a/base/css/style.css
+++ b/base/css/style.css
@@ -548,6 +548,10 @@ body ::-webkit-scrollbar-track {
   line-height: 2.4rem;
   font-size: 1.2rem;
 }
+.ui.input.rounded.md input {
+  line-height: 2.94rem;
+  font-size: 1.6rem;
+}
 .ui.input.rounded input {
   padding: 0 1rem;
   line-height: 3.5rem;
@@ -986,6 +990,28 @@ body ::-webkit-scrollbar-track {
 }
 .data-tbl.view table tbody tr:last-child th,
 .data-tbl.view table tbody tr:last-child td {
+  border-bottom: 0;
+}
+.data-tbl.view2 table {
+  border-top: 1px solid #cbcbcb;
+  border-bottom: 1px solid #cbcbcb;
+}
+.data-tbl.view2 table tbody th {
+  padding: 0;
+  font-size: 1.6rem;
+  font-weight: 600;
+  text-align: center;
+  background: #f8f8f8;
+  border-bottom: 1px solid #cbcbcb;
+}
+.data-tbl.view2 table tbody td {
+  padding: 1.9rem 3rem;
+  line-height: 100%;
+  font-size: 1.6rem;
+  border-bottom: 1px solid #cbcbcb;
+}
+.data-tbl.view2 table tbody tr:last-child th,
+.data-tbl.view2 table tbody tr:last-child td {
   border-bottom: 0;
 }
 .data-tbl .height-extend {
@@ -3470,6 +3496,7 @@ body ::-webkit-scrollbar-track {
   background-image: url(/base/images/icon_crosswalk_yellow.png);
 }
 .gnb .aside {
+  position: relative;
   margin-top: auto;
 }
 .gnb .aside [class*=btn] {
@@ -3493,8 +3520,23 @@ body ::-webkit-scrollbar-track {
   color: #fff;
 }
 .gnb .aside .btn-bell {
+  position: relative;
   margin-bottom: 2.15rem;
   padding: 0 0 0 1.6rem;
+}
+.gnb .aside .btn-bell.active::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 2.7rem;
+  content: "";
+  display: block;
+  width: 1.6rem;
+  height: 1.6rem;
+  background-image: url("/base/images/icon_triangle_exclamation_red2.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
 }
 .gnb .aside .btn-bell::before {
   content: "";
@@ -3521,16 +3563,11 @@ body ::-webkit-scrollbar-track {
   background-size: contain;
   margin-right: 1.45rem;
 }
-.gnb .aside .btn-m::after {
-  content: "";
-  display: block;
-  width: 3rem;
-  height: 2.5rem;
-  background-image: url("/base/images/arr_down_white.png");
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  background-size: 1.3rem 0.7rem;
-  margin-left: auto;
+.gnb .aside .btn-m.active, .gnb .aside .btn-m:hover {
+  color: #ffe298;
+}
+.gnb .aside .btn-m.active::before, .gnb .aside .btn-m:hover::before {
+  background-image: url(/base/images/icon_m_yellow.png);
 }
 .gnb .aside .current-time {
   margin: 2.3rem 0 3.6rem;
@@ -3542,6 +3579,79 @@ body ::-webkit-scrollbar-track {
 .gnb .aside .current-time span {
   display: block;
   letter-spacing: -0.06rem;
+}
+.gnb .aside .pop-user-info {
+  display: none;
+  position: absolute;
+  left: 18rem;
+  bottom: 0;
+  width: 19.8rem;
+  border-radius: 0.8rem;
+  border: 1px solid #5b87a7;
+  background: #0f3f62;
+  -webkit-box-shadow: 2px 0px 4px 0px rgba(0, 0, 0, 0.25);
+          box-shadow: 2px 0px 4px 0px rgba(0, 0, 0, 0.25);
+}
+.gnb .aside .pop-user-info em,
+.gnb .aside .pop-user-info a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  line-height: 4.5rem;
+  color: #fff;
+  font-size: 1.6rem;
+}
+.gnb .aside .pop-user-info .tit {
+  gap: 0 1.45rem;
+  border-bottom: 1px solid #5b87a7;
+}
+.gnb .aside .pop-user-info .tit::before {
+  content: "";
+  width: 2.5rem;
+  height: 2.5rem;
+  background-image: url("/base/images/icon_m_bg_yellow.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
+  margin-left: 1.45rem;
+}
+.gnb .aside .pop-user-info .user-edit {
+  gap: 0 1.9rem;
+}
+.gnb .aside .pop-user-info .user-edit::before {
+  content: "";
+  width: 1.6rem;
+  height: 1.8rem;
+  background-image: url("/base/images/icon_man.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
+  margin-left: 1.9rem;
+}
+.gnb .aside .pop-user-info .user-logout {
+  gap: 0 1.74rem;
+}
+.gnb .aside .pop-user-info .user-logout::before {
+  content: "";
+  width: 1.9rem;
+  height: 1.95rem;
+  background-image: url("/base/images/icon_out.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
+  margin-left: 1.74rem;
 }
 
 /* 지도 > 검색 */
@@ -4037,6 +4147,48 @@ body ::-webkit-scrollbar-track {
 }
 .search-view-body .result-list li .right button:first-child {
   margin-right: 1.2rem;
+}
+
+/* 프로필 수정 화면 */
+.profile-wrap {
+  width: 68.6rem;
+  margin: 0 auto;
+  padding-top: 11.9rem;
+}
+.profile-wrap h2 {
+  margin-bottom: 3rem;
+  font-size: 2.8rem;
+  color: #1e5f8d;
+  font-weight: 700;
+}
+.profile-wrap > section:not(:first-child) {
+  margin-top: 2.5rem;
+}
+.profile-wrap > section h3 {
+  margin-bottom: 1rem;
+  font-size: 2rem;
+  color: #727272;
+  font-weight: 600;
+}
+.profile-wrap > section .data-tbl .ui.input.rounded {
+  width: 30rem;
+}
+.profile-wrap > section .data-tbl .ui.input.rounded input {
+  -webkit-transition: border-color 0.2s;
+  transition: border-color 0.2s;
+}
+.profile-wrap > section .data-tbl .ui.input.rounded input:focus {
+  border-color: #1e5f8d;
+}
+.profile-wrap > section .data-tbl .txt {
+  line-height: 3.1rem;
+}
+.profile-wrap > section .profile-bottom {
+  padding-top: 1.2rem;
+  text-align: right;
+}
+.profile-wrap > section .profile-bottom .button.basic.primary {
+  width: 8rem;
 }
 
 /* 텍스트 디자인으로 구성된 라디오 버튼 그룹 */
