--- a/base/css/is.css
+++ b/base/css/is.css
@@ -481,6 +481,61 @@
   color: #999999;
 }
 
+/* 돌발 발생 이력 */
+.outbreak-record .filter-grouop {
+  margin-bottom: 3rem;
+}
+.outbreak-record .button-function-group {
+  margin-bottom: 0.8rem;
+}
+.outbreak-record .button-function-group .left {
+  margin-bottom: 0;
+  font-size: 1.6rem;
+  color: #1e5f8d;
+}
+.outbreak-record .button-function-group .right .ui.button.basic.primary {
+  width: 12.7rem;
+}
+
+/* 돌발 발생 이력 : 돌발 상태 확인 팝업 */
+.outbreak-situation {
+  padding: 3rem 2.4rem 0;
+}
+.outbreak-situation > em {
+  font-size: 2rem;
+  color: #1e5f8d;
+  font-weight: 500;
+}
+.outbreak-situation .geomji-type {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  gap: 0 3.5rem;
+  margin-top: 2rem;
+}
+.outbreak-situation .geomji-type .ui.checkbox.primary-chkbox label {
+  padding-left: 2.6rem;
+  line-height: 100%;
+  font-size: 1.8rem;
+  color: #727272;
+}
+.outbreak-situation .geomji-type .ui.checkbox.primary-chkbox label::before, .outbreak-situation .geomji-type .ui.checkbox.primary-chkbox label::after {
+  width: 1.8rem;
+  height: 1.8rem;
+}
+
 /* 교차로 상세 탭(통계/영상/돌발) 화면 */
 .crossroad-view-container {
   position: fixed;
