--- a/base/css/style.css
+++ b/base/css/style.css
@@ -477,6 +477,87 @@ body ::-webkit-scrollbar-track {
   background-position: 0 0;
   background-size: contain;
 }
+.ico-refresh {
+  display: inline-block;
+  width: 1.6rem;
+  height: 1.6rem;
+  background-image: url("/base/images/icon_refresh.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
+}
+.ico-los-a {
+  display: inline-block;
+  width: 4.6rem;
+  height: 6.4rem;
+  background-image: url("/base/images//los/icon_los_a.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
+}
+.ico-los-b {
+  display: inline-block;
+  width: 4.6rem;
+  height: 6.4rem;
+  background-image: url("/base/images//los/icon_los_b.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
+}
+.ico-los-c {
+  display: inline-block;
+  width: 4.6rem;
+  height: 6.4rem;
+  background-image: url("/base/images//los/icon_los_c.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
+}
+.ico-los-d {
+  display: inline-block;
+  width: 4.6rem;
+  height: 6.4rem;
+  background-image: url("/base/images//los/icon_los_d.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
+}
+.ico-los-e {
+  display: inline-block;
+  width: 4.6rem;
+  height: 6.4rem;
+  background-image: url("/base/images//los/icon_los_e.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
+}
+.ico-los-f {
+  display: inline-block;
+  width: 4.6rem;
+  height: 6.4rem;
+  background-image: url("/base/images//los/icon_los_f.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
+}
+.ico-los-ff {
+  display: inline-block;
+  width: 4.6rem;
+  height: 6.4rem;
+  background-image: url("/base/images//los/icon_los_ff.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
+}
+.ico-los-fff {
+  display: inline-block;
+  width: 4.6rem;
+  height: 6.4rem;
+  background-image: url("/base/images//los/icon_los_fff.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
+}
 
 .txt-badge {
   padding: 0.5rem 0.6rem;
@@ -2967,12 +3048,25 @@ body ::-webkit-scrollbar-track {
   left: 0;
   top: 0;
   z-index: 5;
-  width: 28.1rem;
+  width: 30rem;
   padding: 1rem 1rem 1.5rem;
   border-radius: 0.5rem;
+  border: 1px solid #727272;
   -webkit-box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.25);
           box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.25);
   background: #3d3d3d;
+}
+.camera-popup.current-active {
+  z-index: 6;
+  border-color: #2867e1;
+  background: #003f9d;
+}
+.camera-popup.current-active .btn-model.active {
+  background: #4878c1 !important;
+}
+.camera-popup.current-active .model-traffic {
+  border-color: #2867e1;
+  background: #003f9d;
 }
 .camera-popup-header {
   display: -webkit-box;
@@ -3026,14 +3120,32 @@ body ::-webkit-scrollbar-track {
 .camera-popup-content {
   padding: 1.1rem 0;
 }
-.camera-popup-bottom .tit {
-  display: block;
+.camera-popup-bottom .bot-info1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
   margin-bottom: 0.6rem;
+}
+.camera-popup-bottom .bot-info1 .tit {
   font-size: 1.2rem;
   color: #fff;
+}
+.camera-popup-bottom .bot-info1 .tit em {
   font-weight: 600;
 }
-.camera-popup-bottom .bind {
+.camera-popup-bottom .bot-info1 .right {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -3049,23 +3161,181 @@ body ::-webkit-scrollbar-track {
           align-items: center;
   -ms-flex-line-pack: center;
       align-content: center;
-  gap: 0 1rem;
+  gap: 0 0.5rem;
 }
-.camera-popup-bottom .bind span {
+.camera-popup-bottom .bot-info1 .right > span {
+  font-size: 1.2rem;
+  color: rgba(255, 255, 255, 0.7);
+  font-weight: 300;
+}
+.camera-popup-bottom .bot-info2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+}
+.camera-popup-bottom .bot-info2 .left {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+.camera-popup-bottom .bot-info2 .left span {
   font-size: 1.2rem;
   color: #fff;
 }
-.camera-popup-bottom .bind span em {
-  display: inline-block;
-  margin-left: 0.2rem;
-  font-size: 1.4rem;
+.camera-popup-bottom .bot-info2 .left span:nth-child(1) em,
+.camera-popup-bottom .bot-info2 .left span:nth-child(1) i {
   color: #ffd056;
-  font-weight: 500;
 }
-.camera-popup-bottom .bind span i {
+.camera-popup-bottom .bot-info2 .left span:nth-child(2) em,
+.camera-popup-bottom .bot-info2 .left span:nth-child(2) i {
+  color: #aee70c;
+}
+.camera-popup-bottom .bot-info2 .left span:nth-child(3) em,
+.camera-popup-bottom .bot-info2 .left span:nth-child(3) i {
+  color: #ffa6a6;
+}
+.camera-popup-bottom .bot-info2 .left span em {
+  display: inline-block;
+  margin-left: 0.4rem;
+  font-size: 1.4rem;
+  font-weight: 700;
+}
+.camera-popup-bottom .bot-info2 .left span i {
   display: inline-block;
   font-size: 1.2rem;
-  color: #ffd056;
+}
+.camera-popup-bottom .bot-info2 .btn-model {
+  position: relative;
+  width: 5.4rem;
+  line-height: 1.7rem;
+  padding: 0 0.4rem;
+  border-radius: 0.3rem;
+  border: 1px solid #fff;
+  font-size: 1.2rem;
+  color: #fff;
+  text-align: left;
+}
+.camera-popup-bottom .bot-info2 .btn-model::after {
+  content: "";
+  position: absolute;
+  top: 0.6rem;
+  right: 0.4rem;
+  width: 0.8rem;
+  height: 0.5rem;
+  background-image: url("/base/images/arr_down_white.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+.camera-popup-bottom .bot-info2 .btn-model.active {
+  background: #727272;
+  border-color: #999999;
+}
+.camera-popup-bottom .bot-info2 .btn-model.active::after {
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.model-traffic {
+  display: none;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: -19.1rem;
+  background: #3d3d3d;
+  border-radius: 0.5rem;
+  border: 1px solid #727272;
+  -webkit-box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.25);
+          box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.25);
+}
+.model-traffic > .tit {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  gap: 0 0.6rem;
+  padding: 1rem;
+  font-size: 1.4rem;
+  color: #fff;
+  font-weight: 500;
+}
+.model-traffic > .tit::before {
+  content: "";
+  display: block;
+  width: 0.5rem;
+  height: 1.4rem;
+  background-image: url("/base/images/icon_dot_double.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
+}
+.model-traffic-data {
+  padding: 0 2rem 1.5rem;
+}
+.model-traffic-data li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  line-height: 2.4rem;
+  border-radius: 0.5rem;
+  border: 0.75px solid #999999;
+  text-align: center;
+  font-size: 1.2rem;
+}
+.model-traffic-data li + li {
+  margin-top: 0.3rem;
+}
+.model-traffic-data li em {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  color: #fff;
+  font-weight: 600;
+}
+.model-traffic-data li span {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  color: #e8e8e8;
+  font-weight: 300;
 }
 
 /* 돌발/장애 탭 팝업 */
@@ -3654,6 +3924,10 @@ body ::-webkit-scrollbar-track {
   -webkit-transform: rotate(80deg);
       -ms-transform: rotate(80deg);
           transform: rotate(80deg);
+}
+.ly-map [class*=ico-los] {
+  position: absolute;
+  z-index: 1;
 }
 .ly-sub {
   width: 100%;
